@@ -3,8 +3,8 @@ package ch.hsr.eyecam.colormodel;
 import java.util.SortedMap;
 import java.util.TreeMap;
 
-import android.util.Log;
 
+import ch.hsr.eyecam.Debug;
 import ch.hsr.eyecam.R;
 
 /**
@@ -60,14 +60,14 @@ public class Color {
 		int v = (yuv[2]<0) ? yuv[2]+256 : yuv[2];
 		v -= 128;
 		
-		Log.d(LOG_TAG , "YUV Values from Buffer: y: " + y + " u: " + u + " v: " + v);
+		Debug.msg(LOG_TAG , "YUV Values from Buffer: y: " + y + " u: " + u + " v: " + v);
 		rgb[0] = (int) (y + 1.13983*v);
 		if (rgb[0] < 0) rgb[0] = 0; else if (rgb[0] > 255) rgb[0] = 255;
 		rgb[1] = (int) (y - 0.39465*u - 0.58060*v);
 		if (rgb[1] < 0) rgb[1] = 0; else if (rgb[1] > 255) rgb[1] = 255;
 		rgb[2] = (int) (y + 2.03211*u);
 		if (rgb[2] < 0) rgb[2] = 0; else if (rgb[2] > 255) rgb[2] = 255;
-		Log.d(LOG_TAG , "converted RGB Values: r: " + rgb[0] + " g: " + rgb[1] + " b: " + rgb[2]);
+		Debug.msg(LOG_TAG , "converted RGB Values: r: " + rgb[0] + " g: " + rgb[1] + " b: " + rgb[2]);
 		
 		return rgbToColor(rgb);
 	}
@@ -76,7 +76,7 @@ public class Color {
 	 * Converts the color represented in RGB color space to the
 	 * string representation of the color. 
 	 * 
-	 * @param 	rgb. int array of RGB values each in the range [0,255]
+	 * @param 	rgb int array of RGB values each in the range [0,255]
 	 * @return 	the resource id of the String representation of the
 	 * 			color.
 	 */
@@ -97,7 +97,7 @@ public class Color {
 		else if (max == b) hsl[0] = 60*(((r-g)/chroma)+4);
 		
 		if (chroma != 0) hsl[1] = chroma/(255.0f*(1-Math.abs(2*luma-1)));
-		Log.d(LOG_TAG , "converted hsl Values: h: " + hsl[0] + " s: " + hsl[1] + " l: " + hsl[2]);
+		Debug.msg(LOG_TAG , "converted hsl Values: h: " + hsl[0] + " s: " + hsl[1] + " l: " + hsl[2]);
 		return hslToColor(hsl);
 	}
 	
@@ -109,7 +109,7 @@ public class Color {
 	 * from 0 to 360 degrees, whereas saturation and lightness are in 
 	 * the range [0,1].
 	 * 
-	 * @param 	hsl. float array of HSL values.
+	 * @param 	hsl float array of HSL values.
 	 * @return 	the resource id of the String representation of the
 	 * 			color.
 	 */
@@ -120,7 +120,7 @@ public class Color {
 		
 		int color = UNKNOWN;
 		int key = (int)hsl[0];
-		Log.d(LOG_TAG, "colorKey: " + key);
+		Debug.msg(LOG_TAG, "colorKey: " + key);
 		for (Integer colorKey : sColorMap.keySet()){
 			if (key < colorKey) {
 				color = sColorMap.get(colorKey).intValue();
@@ -139,21 +139,21 @@ public class Color {
 	static {
 		sColorMap = new TreeMap<Integer, Integer>();
 		
-		sColorMap.put(new Integer(20),
-				new Integer(RED));
-		sColorMap.put(new Integer(45), 
-				new Integer(ORANGE));
-		sColorMap.put(new Integer(70), 
-				new Integer(YELLOW));
-		sColorMap.put(new Integer(150), 
-				new Integer(GREEN));
-		sColorMap.put(new Integer(200), 
-				new Integer(TURQUOISE));
-		sColorMap.put(new Integer(265), 
-				new Integer(BLUE));
-		sColorMap.put(new Integer(330), 
-				new Integer(PURPLE));
-		sColorMap.put(new Integer(360), 
-				new Integer(RED));
+		sColorMap.put(Integer.valueOf(20),
+				Integer.valueOf(RED));
+		sColorMap.put(Integer.valueOf(45), 
+				Integer.valueOf(ORANGE));
+		sColorMap.put(Integer.valueOf(70), 
+				Integer.valueOf(YELLOW));
+		sColorMap.put(Integer.valueOf(150), 
+				Integer.valueOf(GREEN));
+		sColorMap.put(Integer.valueOf(200), 
+				Integer.valueOf(TURQUOISE));
+		sColorMap.put(Integer.valueOf(265), 
+				Integer.valueOf(BLUE));
+		sColorMap.put(Integer.valueOf(330), 
+				Integer.valueOf(PURPLE));
+		sColorMap.put(Integer.valueOf(360), 
+				Integer.valueOf(RED));
 	}
 }
